 * Enh #3805: Add ability to filter on bugs monitored by a user
 * Enh #3944: Add ability to filter on 'Fixed in Version'
 * Enh #3969: Relationship - Patch available (masc) - partial implementation - disabled by default.
 * Enh #3974: Make Mantis issues searchable by Search Engine
 * Enh #3984: Support definining and enforcing custom workflow (thraxisp)
 * Enh #4016: Automatic language selection based on browser preferences
 * Enh #4036: Changelog should not display versions with no issues (vboctor)
 * Enh #4038: Add icon to sponsorships to attract attention (vboctor)
 * Enh #4066: Support "future" versions and a description field (vboctor)
 * Enh #4072: Make sponsorships and relationships collapsible 
 * Fix #4005: Signup for new account - invalid username generates crash
 * Fix #4017: Random translations popping up
 * Fix #4018: Real name field allows potentially dangerous HTML
 * Fix #4020: Database field 'realname' not found after plain installation (vboctor)
 * Fix #4027: Database query error on text search
 * Fix #4040: Sponsorship timestamp is not displayed correctly in sponsorship list (vboctor)
 * Fix #4041: Empty "Users sponsoring this issue" (vboctor)
 * Fix #4044: Cross Site Scripting Vulnerability
 * Fix #4052: Not all the buttons are marked as class="button" (vboctor)
 * Fix #4056: Displaying/Reporting Issue -> Application Warning - lang_exists() missing arg 2 (vboctor)
 * Fix #4064: Links are not hyperlinked property if containing () (vboctor)
 * Fix #4065: Issues are not hyperlinked in Changelog if $g_bug_link_tag is not # (vboctor).
 * Fix #4081: mantis_upgrade_table.upgrade_id too small (vboctor).
 * New Config: fallback_language (default 'english') - Fallback language for automatic language selection.
 * New Config: status_enum_workflow (default disabled) - Defines the workflow to indicate what are the possible statuses based on the current one.
 * Updated German, Italian, Russian, Czech and Brazilian Portuguese languages.
