@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: my_view_inc.php,v 1.1 2004-06-28 10:13:23 vboctor Exp $
+	# $Id: my_view_inc.php,v 1.2 2004-07-15 13:32:12 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -29,6 +29,98 @@
 	$t_icon_path = config_get( 'icon_path' );
 	$t_update_bug_threshold = config_get( 'update_bug_threshold' );
 ?>
+
+<?php
+	$c_filter['assigned'] = array(
+		'show_category'		=> Array ( '0' => 'any' ),
+		'show_severity'		=> Array ( '0' => 'any' ),
+		'show_status'		=> Array ( '0' => 'any' ),
+		'highlight_changed'	=> '6',
+		'reporter_id'		=> Array ( '0' => 'any' ),
+		'handler_id'		=> Array ( '0' => $t_current_user_id ),
+		'show_resolution'	=> Array ( '0' => 'any' ),
+		'show_build'		=> Array ( '0' => 'any' ),
+		'show_version'		=> Array ( '0' => 'any' ),
+		'hide_status'		=> Array ( '0' => 80 ),
+		'user_monitor'		=> Array ( '0' => 'any' )
+	);
+
+	$c_filter['recent_mod'] = array(
+		'show_category'		=> Array ( '0' => 'any' ),
+		'show_severity'		=> Array ( '0' => 'any' ),
+		'show_status'		=> Array ( '0' => 'any' ),
+		'highlight_changed'	=> '6',
+		'reporter_id'		=> Array ( '0' => 'any' ),
+		'handler_id'		=> Array ( '0' => 'any' ),
+		'show_resolution'	=> Array ( '0' => 'any' ),
+		'show_build'		=> Array ( '0' => 'any' ),
+		'show_version'		=> Array ( '0' => 'any' ),
+		'hide_status'		=> Array ( '0' => 'none' ),
+		'user_monitor'		=> Array ( '0' => 'any' )
+	);
+
+	$c_filter['reported'] = array(
+		'show_category'		=> Array ( '0' => 'any' ),
+		'show_severity'		=> Array ( '0' => 'any' ),
+		'show_status'		=> Array ( '0' => 'any' ),
+		'highlight_changed'	=> '6',
+		'reporter_id'		=> Array ( '0' => $t_current_user_id ),
+		'handler_id'		=> Array ( '0' => 'any' ),
+		'sort'			=> 'last_updated',
+		'show_resolution'	=> Array ( '0' => 'any' ),
+		'show_build'		=> Array ( '0' => 'any' ),
+		'show_version'		=> Array ( '0' => 'any' ),
+		'hide_status'		=> Array ( '0' => 90 ),
+		'user_monitor'		=> Array ( '0' => 'any' )
+	);
+
+	$c_filter['resolved'] = array(
+		'show_category'		=> Array ( '0' => 'any' ),
+		'show_severity'		=> Array ( '0' => 'any' ),
+		'show_status'		=> Array ( '0' => 80 ),
+		'highlight_changed'	=> '6',
+		'reporter_id'		=> Array ( '0' => 'any' ),
+		'handler_id'		=> Array ( '0' => 'any' ),
+		'show_resolution'	=> Array ( '0' => 'any' ),
+		'show_build'		=> Array ( '0' => 'any' ),
+		'show_version'		=> Array ( '0' => 'any' ),
+		'hide_status'		=> Array ( '0' => 90 ),
+		'user_monitor'		=> Array ( '0' => 'any' )
+	);
+
+	$c_filter['unassigned'] = array(
+		'show_category'		=> Array ( '0' => 'any' ),
+		'show_severity'		=> Array ( '0' => 'any' ),
+		'show_status'		=> Array ( '0' => 'any' ),
+		'highlight_changed'	=> '6',
+		'reporter_id'		=> Array ( '0' => 'any' ),
+		'handler_id'		=> Array ( '0' => 'none' ),
+		'show_resolution'	=> Array ( '0' => 'any' ),
+		'show_build'		=> Array ( '0' => 'any' ),
+		'show_version'		=> Array ( '0' => 'any' ),
+		'hide_status'		=> Array ( '0' => 90 ),
+		'user_monitor'		=> Array ( '0' => 'any' )
+	);
+
+	$c_filter['monitored'] = array(
+		'show_category'		=> Array ( '0' => 'any' ),
+		'show_severity'		=> Array ( '0' => 'any' ),
+		'show_status'		=> Array ( '0' => 'any' ),
+		'highlight_changed'	=> '6',
+		'reporter_id'		=> Array ( '0' => 'any' ),
+		'handler_id'		=> Array ( '0' => 'none' ),
+		'show_resolution'	=> Array ( '0' => 'any' ),
+		'show_build'		=> Array ( '0' => 'any' ),
+		'show_version'		=> Array ( '0' => 'any' ),
+		'hide_status'		=> Array ( '0' => 90 ),
+		'user_monitor'		=> Array ( '0' => $t_current_user_id )
+	);
+
+        $rows = filter_get_bug_rows ( $f_page_number, $t_per_page, $t_page_count, $t_bug_count, $c_filter[$t_box_title]  );
+
+        $box_title = lang_get( 'my_view_title_' . $t_box_title );
+?>
+
 
 <?php # -- ====================== BUG LIST ========================= -- ?>
 
