@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: my_view_page.php,v 1.5 2004-07-08 03:26:43 int2str Exp $
+	# $Id: my_view_page.php,v 1.6 2004-07-15 13:32:11 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -16,11 +16,6 @@
 	require_once( $t_core_path . 'filter_api.php' );
 
 	auth_ensure_user_authenticated();
-
-	if ( current_user_is_anonymous() ) {
-		print_header_redirect( 'main_page.php' );
-		exit;
-	}
 
 	$t_current_user_id = auth_get_current_user_id();
 
@@ -44,6 +39,8 @@
 	asort ($t_boxes);
 	reset ($t_boxes);
 	#print_r ($t_boxes);
+
+	$t_project_id = helper_get_current_project();
 ?>
 
 <div align="center">
@@ -63,17 +60,30 @@
 	$t_number_of_boxes = count ( $t_boxes );
 	$t_counter = 0;
 	while (list ($t_box_title, $t_box_display) = each ($t_boxes)) {
+		# don't display bugs that are set as 0
 		if ($t_box_display == 0) {
+			$t_number_of_boxes = $t_number_of_boxes - 1;
+		}
+		# don't display "Assigned to Me" bugs to users that bugs can't be assigned to
+		else if ( $t_box_title == 'assigned' && ( current_user_is_anonymous() OR !access_has_project_level( config_get( 'handle_bug_threshold' ), $t_project_id, $t_current_user_id ) ) ) {
+			$t_number_of_boxes = $t_number_of_boxes - 1;
+		}
+		# don't display "Monitored by Me" bugs to users that can't monitor bugs
+		else if ( $t_box_title == 'monitored' && ( current_user_is_anonymous() OR !access_has_project_level( config_get( 'monitor_bug_threshold' ), $t_project_id, $t_current_user_id ) ) ) {
+			$t_number_of_boxes = $t_number_of_boxes - 1;
+		}
+		#don't display "Reported by Me" bugs to users that can't report bugs
+		else if ( $t_box_title == 'reported' && ( current_user_is_anonymous() OR !access_has_project_level( config_get( 'report_bug_threshold' ), $t_project_id, $t_current_user_id ) ) ) {
 			$t_number_of_boxes = $t_number_of_boxes - 1;
 		} else {
 			$t_counter++;
 			if ($t_counter%2 == 1) {
 				echo '<tr><td valign="top" width="50%">';
-				include( dirname( __FILE__ ) . DIRECTORY_SEPARATOR . 'core' . DIRECTORY_SEPARATOR . 'my_view_inc_' . $t_box_title . '.php' );
+				include( dirname( __FILE__ ) . DIRECTORY_SEPARATOR . 'core' . DIRECTORY_SEPARATOR . 'my_view_inc.php' );
 				echo '</td>';
 			} elseif ($t_counter%2 == 0) {
 				echo '<td valign="top" width="50%">';
-				include( dirname( __FILE__ ) . DIRECTORY_SEPARATOR . 'core' . DIRECTORY_SEPARATOR . 'my_view_inc_' . $t_box_title . '.php' );
+				include( dirname( __FILE__ ) . DIRECTORY_SEPARATOR . 'core' . DIRECTORY_SEPARATOR . 'my_view_inc.php' );
 				echo '</td></tr>';
 			}
 			if ( ($t_counter == $t_number_of_boxes) && $t_counter%2 == 1) {
