@@ -8,6 +8,7 @@ Mantis ChangeLog
  * Enh #3969: Relationship - Patch available (masc) - partial implementation - disabled by default.
  * Enh #3974: Make Mantis issues searchable by Search Engine
  * Enh #3984: Support definining and enforcing custom workflow (thraxisp)
+ * Enh #3996: My View: how about monitored by me?
  * Enh #4016: Automatic language selection based on browser preferences
  * Enh #4036: Changelog should not display versions with no issues (vboctor)
  * Enh #4038: Add icon to sponsorships to attract attention (vboctor)
